# GENIO

./: .gitignore  pyproject.toml
docs/: CLASSIC_IMAGE_PIPELINE_STAGES.md  PARAMETER_CONFIG_FILES_FORMAT.md  STAGE_FILES_FORMAT.md  STAGE_IMPLEMENTATION_AUDIT.md
search_space/stages/definitions/base/: absolute_difference.json  accumulate.json  accumulate_squared.json  accumulate_weighted.json  add.json  add_weighted.json  aec.json  agc.json  auto_white_balance.json  awb.json  awb_normalization.json  bad_pixel_correction.json  bfmatcher.json  bgr_to_gray.json  bgr_to_hsv.json  bgr_to_rgb.json  bilateral_filter.json  bitwise_and.json  bitwise_not.json  bitwise_or.json  bitwise_xor.json  black_level_correction.json  bounding_box.json  box_filter.json  canny.json  canny_sobel.json  channel_combine.json  channel_extract.json  clahe.json  color_convert_extended.json  color_correction_matrix.json  color_thresholding.json  connected_components.json  convert_bitdepth.json  convert_scale_abs.json  convert_to.json  corner_img_to_list.json  corner_update.json  crop.json  custom_bgr_to_y8.json  (+78 more)
search_space/tests/: color_threshold_pipeline.json  geometric_transform_pipeline.json  lut_and_model_pipeline.json  resize_filter_pipeline.json  simple_threshold_pipeline.json
src/genio/: __init__.py
src/genio/backend/: __init__.py  base.py  local.py
src/genio/core/: __init__.py  candidate.py  evaluator.py  individual.py  result.py
src/genio/runner/: __init__.py  base.py
src/genio/search_space/: __init__.py  space.py  spec.py
tests/: test_framework.py  test_search_space.py
(+223 files in other folders)
